removed obsolete inner TurnEvent class